2016-05-15  6.9.4-2 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.4-2, GIT revision 10778:52dae14:20160516.

2016-05-10  6.9.4-2 Cristy  <quetzlzacatenango@image...>
  * Quote passwords when passed to a delegate program.
  * Can read geo-related EXIF metdata once-again (reference
    https://github.com/ImageMagick/ImageMagick/issues/198).
  * Sanitize all delegate emedded formatting characters.
  * Don't sync pixel cache in AcquireAuthenticCacheView() (bug report from
    Hanno Böck).

2016-05-09  6.9.4-1 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.4-1, GIT revision 10755:d540dda:20160509.

2016-05-07  6.9.4-1 Cristy  <quetzlzacatenango@image...>
  * Remove https delegate.

2016-05-05  6.9.4-0 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.4-0, GIT revision 10741:5746147:20160507.

2016-05-04  6.9.4-0 Cristy  <quetzlzacatenango@image...>
  * Check for buffer overflow in magick/draw.c/DrawStrokePolygon().
  * Replace show delegate title with image filename rather than label.
  * Fix GetNextToken() off by one error.
  * Remove support for internal ephemeral coder.

2016-05-03  6.9.3-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-10, GIT revision 10723:9fc8a0c:20160503.

2016-05-03  6.9.3-10 Cristy  <quetzlzacatenango@image...>
  * Sanitize input filename for http / https delegates (improved patch).
  * Fix for possible security vulnerabilities (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=4&t=29588).

2016-04-30  6.9.3-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-9, GIT revision 10716:b527bce:20160430.

2016-04-12  6.9.3-9 Cristy  <quetzlzacatenango@image...>
  * Sanitize input filename for http / https delegates.
  * Indirect filename must be authorized by policy.
  * The txt coder now properly reports Lab colors (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=2944).
