@@ -3737,9 +3737,13 @@ static MagickBooleanType OpenPixelCache(Image *image,const MapMode mode,
       status=AcquireMagickResource(MapResource,cache_info->length);
       if ((status == MagickFalse) && (cache_info->type != MapCache) &&
           (cache_info->type != MemoryCache))
-        cache_info->type=DiskCache;
+        {
+          status=MagickTrue;
+          cache_info->type=DiskCache;
+        }
       else
         {
+          status=MagickTrue;
           cache_info->pixels=(PixelPacket *) MapBlob(cache_info->file,mode,
             cache_info->offset,(size_t) cache_info->length);
           if (cache_info->pixels == (PixelPacket *) NULL)
@@ -3752,7 +3756,6 @@ static MagickBooleanType OpenPixelCache(Image *image,const MapMode mode,
               /*
                 Create file-backed memory-mapped pixel cache.
               */
-              status=MagickTrue;
               (void) ClosePixelCacheOnDisk(cache_info);
               cache_info->type=MapCache;
               cache_info->mapped=MagickTrue;
