@@ -1,3 +1,7 @@
+2016-05-15  6.9.4-3 Cristy  <quetzlzacatenango@image...>
+  * Fix pixel cache on disk regression (reference
+    https://github.com/ImageMagick/ImageMagick/issues/202).
+
 2016-05-15  6.9.4-2 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.4-2, GIT revision 10778:52dae14:20160516.
 
